--- a/ui/src/index.hbs
+++ b/ui/src/index.hbs
@@ -10,7 +10,7 @@
        event: "gtm.js"
      })
     </script>
-    <link rel="shortcut icon" href="/assets/favicon.png">
+    <link rel="shortcut icon" href="/assets/favicon.png">   <!-- // TODO path prefix assets -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuestDB · Console</title>
 </head>
